findingaids/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Expr
Rule 1     Expr -> Expr OR_OP Expr
Rule 2     Expr -> Expr AND_OP Expr
Rule 3     Expr -> Expr EQUAL_OP Expr
Rule 4     Expr -> Expr REL_OP Expr
Rule 5     Expr -> Expr PLUS_OP Expr
Rule 6     Expr -> Expr MINUS_OP Expr
Rule 7     Expr -> Expr MULT_OP Expr
Rule 8     Expr -> Expr DIV_OP Expr
Rule 9     Expr -> Expr MOD_OP Expr
Rule 10    Expr -> Expr UNION_OP Expr
Rule 11    Expr -> MINUS_OP Expr
Rule 12    Expr -> FilterExpr PATH_SEP RelativeLocationPath
Rule 13    Expr -> FilterExpr ABBREV_PATH_SEP RelativeLocationPath
Rule 14    Expr -> RelativeLocationPath
Rule 15    Expr -> AbsoluteLocationPath
Rule 16    Expr -> AbbreviatedAbsoluteLocationPath
Rule 17    Expr -> FilterExpr
Rule 18    AbsoluteLocationPath -> PATH_SEP
Rule 19    AbsoluteLocationPath -> PATH_SEP RelativeLocationPath
Rule 20    AbbreviatedAbsoluteLocationPath -> ABBREV_PATH_SEP RelativeLocationPath
Rule 21    RelativeLocationPath -> Step
Rule 22    RelativeLocationPath -> RelativeLocationPath PATH_SEP Step
Rule 23    RelativeLocationPath -> RelativeLocationPath ABBREV_PATH_SEP Step
Rule 24    Step -> NodeTest
Rule 25    Step -> NodeTest PredicateList
Rule 26    Step -> AxisSpecifier NodeTest
Rule 27    Step -> AxisSpecifier NodeTest PredicateList
Rule 28    Step -> ABBREV_STEP_SELF
Rule 29    Step -> ABBREV_STEP_PARENT
Rule 30    AxisSpecifier -> AXISNAME AXIS_SEP
Rule 31    AxisSpecifier -> ABBREV_AXIS_AT
Rule 32    NodeTest -> NameTest
Rule 33    NodeTest -> NODETYPE OPEN_PAREN CLOSE_PAREN
Rule 34    NodeTest -> NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
Rule 35    NameTest -> STAR_OP
Rule 36    NameTest -> NCNAME COLON STAR_OP
Rule 37    NameTest -> QName
Rule 38    QName -> NCNAME COLON NCNAME
Rule 39    QName -> NCNAME
Rule 40    FuncQName -> NCNAME COLON FUNCNAME
Rule 41    FuncQName -> FUNCNAME
Rule 42    FilterExpr -> VariableReference
Rule 43    FilterExpr -> LITERAL
Rule 44    FilterExpr -> Number
Rule 45    FilterExpr -> FunctionCall
Rule 46    FilterExpr -> OPEN_PAREN Expr CLOSE_PAREN
Rule 47    FilterExpr -> FilterExpr Predicate
Rule 48    PredicateList -> Predicate
Rule 49    PredicateList -> PredicateList Predicate
Rule 50    Predicate -> OPEN_BRACKET Expr CLOSE_BRACKET
Rule 51    VariableReference -> DOLLAR QName
Rule 52    Number -> FLOAT
Rule 53    Number -> INTEGER
Rule 54    FunctionCall -> FuncQName FormalArguments
Rule 55    FormalArguments -> OPEN_PAREN CLOSE_PAREN
Rule 56    FormalArguments -> OPEN_PAREN ArgumentList CLOSE_PAREN
Rule 57    ArgumentList -> Expr
Rule 58    ArgumentList -> ArgumentList COMMA Expr

Terminals, with rules where they appear

ABBREV_AXIS_AT       : 31
ABBREV_PATH_SEP      : 13 20 23
ABBREV_STEP_PARENT   : 29
ABBREV_STEP_SELF     : 28
AND_OP               : 2
AXISNAME             : 30
AXIS_SEP             : 30
CLOSE_BRACKET        : 50
CLOSE_PAREN          : 33 34 46 55 56
COLON                : 36 38 40
COMMA                : 58
DIV_OP               : 8
DOLLAR               : 51
EQUAL_OP             : 3
FLOAT                : 52
FUNCNAME             : 40 41
INTEGER              : 53
LITERAL              : 34 43
MINUS_OP             : 6 11
MOD_OP               : 9
MULT_OP              : 7
NCNAME               : 36 38 38 39 40
NODETYPE             : 33 34
OPEN_BRACKET         : 50
OPEN_PAREN           : 33 34 46 55 56
OR_OP                : 1
PATH_SEP             : 12 18 19 22
PLUS_OP              : 5
REL_OP               : 4
STAR_OP              : 35 36
UNION_OP             : 10
error                : 

Nonterminals, with rules where they appear

AbbreviatedAbsoluteLocationPath : 16
AbsoluteLocationPath : 15
ArgumentList         : 56 58
AxisSpecifier        : 26 27
Expr                 : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 46 50 57 58 0
FilterExpr           : 12 13 17 47
FormalArguments      : 54
FuncQName            : 54
FunctionCall         : 45
NameTest             : 32
NodeTest             : 24 25 26 27
Number               : 44
Predicate            : 47 48 49
PredicateList        : 25 27 49
QName                : 37 51
RelativeLocationPath : 12 13 14 19 20 22 23
Step                 : 21 22 23
VariableReference    : 42

Parsing method: LALR

state 0

    (0) S' -> . Expr
    (1) Expr -> . Expr OR_OP Expr
    (2) Expr -> . Expr AND_OP Expr
    (3) Expr -> . Expr EQUAL_OP Expr
    (4) Expr -> . Expr REL_OP Expr
    (5) Expr -> . Expr PLUS_OP Expr
    (6) Expr -> . Expr MINUS_OP Expr
    (7) Expr -> . Expr MULT_OP Expr
    (8) Expr -> . Expr DIV_OP Expr
    (9) Expr -> . Expr MOD_OP Expr
    (10) Expr -> . Expr UNION_OP Expr
    (11) Expr -> . MINUS_OP Expr
    (12) Expr -> . FilterExpr PATH_SEP RelativeLocationPath
    (13) Expr -> . FilterExpr ABBREV_PATH_SEP RelativeLocationPath
    (14) Expr -> . RelativeLocationPath
    (15) Expr -> . AbsoluteLocationPath
    (16) Expr -> . AbbreviatedAbsoluteLocationPath
    (17) Expr -> . FilterExpr
    (42) FilterExpr -> . VariableReference
    (43) FilterExpr -> . LITERAL
    (44) FilterExpr -> . Number
    (45) FilterExpr -> . FunctionCall
    (46) FilterExpr -> . OPEN_PAREN Expr CLOSE_PAREN
    (47) FilterExpr -> . FilterExpr Predicate
    (21) RelativeLocationPath -> . Step
    (22) RelativeLocationPath -> . RelativeLocationPath PATH_SEP Step
    (23) RelativeLocationPath -> . RelativeLocationPath ABBREV_PATH_SEP Step
    (18) AbsoluteLocationPath -> . PATH_SEP
    (19) AbsoluteLocationPath -> . PATH_SEP RelativeLocationPath
    (20) AbbreviatedAbsoluteLocationPath -> . ABBREV_PATH_SEP RelativeLocationPath
    (51) VariableReference -> . DOLLAR QName
    (52) Number -> . FLOAT
    (53) Number -> . INTEGER
    (54) FunctionCall -> . FuncQName FormalArguments
    (24) Step -> . NodeTest
    (25) Step -> . NodeTest PredicateList
    (26) Step -> . AxisSpecifier NodeTest
    (27) Step -> . AxisSpecifier NodeTest PredicateList
    (28) Step -> . ABBREV_STEP_SELF
    (29) Step -> . ABBREV_STEP_PARENT
    (40) FuncQName -> . NCNAME COLON FUNCNAME
    (41) FuncQName -> . FUNCNAME
    (32) NodeTest -> . NameTest
    (33) NodeTest -> . NODETYPE OPEN_PAREN CLOSE_PAREN
    (34) NodeTest -> . NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
    (30) AxisSpecifier -> . AXISNAME AXIS_SEP
    (31) AxisSpecifier -> . ABBREV_AXIS_AT
    (35) NameTest -> . STAR_OP
    (36) NameTest -> . NCNAME COLON STAR_OP
    (37) NameTest -> . QName
    (38) QName -> . NCNAME COLON NCNAME
    (39) QName -> . NCNAME

    MINUS_OP        shift and go to state 4
    LITERAL         shift and go to state 19
    OPEN_PAREN      shift and go to state 9
    PATH_SEP        shift and go to state 10
    ABBREV_PATH_SEP shift and go to state 2
    DOLLAR          shift and go to state 18
    FLOAT           shift and go to state 26
    INTEGER         shift and go to state 13
    ABBREV_STEP_SELF shift and go to state 14
    ABBREV_STEP_PARENT shift and go to state 11
    NCNAME          shift and go to state 7
    FUNCNAME        shift and go to state 29
    NODETYPE        shift and go to state 24
    AXISNAME        shift and go to state 15
    ABBREV_AXIS_AT  shift and go to state 25
    STAR_OP         shift and go to state 23

    NodeTest                       shift and go to state 1
    FuncQName                      shift and go to state 6
    NameTest                       shift and go to state 3
    Expr                           shift and go to state 16
    AxisSpecifier                  shift and go to state 27
    Number                         shift and go to state 12
    VariableReference              shift and go to state 28
    QName                          shift and go to state 17
    Step                           shift and go to state 8
    FunctionCall                   shift and go to state 30
    AbbreviatedAbsoluteLocationPath shift and go to state 5
    AbsoluteLocationPath           shift and go to state 20
    RelativeLocationPath           shift and go to state 21
    FilterExpr                     shift and go to state 22

state 1

    (24) Step -> NodeTest .
    (25) Step -> NodeTest . PredicateList
    (48) PredicateList -> . Predicate
    (49) PredicateList -> . PredicateList Predicate
    (50) Predicate -> . OPEN_BRACKET Expr CLOSE_BRACKET

    PATH_SEP        reduce using rule 24 (Step -> NodeTest .)
    ABBREV_PATH_SEP reduce using rule 24 (Step -> NodeTest .)
    CLOSE_BRACKET   reduce using rule 24 (Step -> NodeTest .)
    OR_OP           reduce using rule 24 (Step -> NodeTest .)
    AND_OP          reduce using rule 24 (Step -> NodeTest .)
    EQUAL_OP        reduce using rule 24 (Step -> NodeTest .)
    REL_OP          reduce using rule 24 (Step -> NodeTest .)
    PLUS_OP         reduce using rule 24 (Step -> NodeTest .)
    MINUS_OP        reduce using rule 24 (Step -> NodeTest .)
    MULT_OP         reduce using rule 24 (Step -> NodeTest .)
    DIV_OP          reduce using rule 24 (Step -> NodeTest .)
    MOD_OP          reduce using rule 24 (Step -> NodeTest .)
    UNION_OP        reduce using rule 24 (Step -> NodeTest .)
    $end            reduce using rule 24 (Step -> NodeTest .)
    CLOSE_PAREN     reduce using rule 24 (Step -> NodeTest .)
    COMMA           reduce using rule 24 (Step -> NodeTest .)
    OPEN_BRACKET    shift and go to state 32

    PredicateList                  shift and go to state 33
    Predicate                      shift and go to state 31

state 2

    (20) AbbreviatedAbsoluteLocationPath -> ABBREV_PATH_SEP . RelativeLocationPath
    (21) RelativeLocationPath -> . Step
    (22) RelativeLocationPath -> . RelativeLocationPath PATH_SEP Step
    (23) RelativeLocationPath -> . RelativeLocationPath ABBREV_PATH_SEP Step
    (24) Step -> . NodeTest
    (25) Step -> . NodeTest PredicateList
    (26) Step -> . AxisSpecifier NodeTest
    (27) Step -> . AxisSpecifier NodeTest PredicateList
    (28) Step -> . ABBREV_STEP_SELF
    (29) Step -> . ABBREV_STEP_PARENT
    (32) NodeTest -> . NameTest
    (33) NodeTest -> . NODETYPE OPEN_PAREN CLOSE_PAREN
    (34) NodeTest -> . NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
    (30) AxisSpecifier -> . AXISNAME AXIS_SEP
    (31) AxisSpecifier -> . ABBREV_AXIS_AT
    (35) NameTest -> . STAR_OP
    (36) NameTest -> . NCNAME COLON STAR_OP
    (37) NameTest -> . QName
    (38) QName -> . NCNAME COLON NCNAME
    (39) QName -> . NCNAME

    ABBREV_STEP_SELF shift and go to state 14
    ABBREV_STEP_PARENT shift and go to state 11
    NODETYPE        shift and go to state 24
    AXISNAME        shift and go to state 15
    ABBREV_AXIS_AT  shift and go to state 25
    STAR_OP         shift and go to state 23
    NCNAME          shift and go to state 34

    NodeTest                       shift and go to state 1
    NameTest                       shift and go to state 3
    AxisSpecifier                  shift and go to state 27
    QName                          shift and go to state 17
    Step                           shift and go to state 8
    RelativeLocationPath           shift and go to state 35

state 3

    (32) NodeTest -> NameTest .

    OPEN_BRACKET    reduce using rule 32 (NodeTest -> NameTest .)
    PATH_SEP        reduce using rule 32 (NodeTest -> NameTest .)
    ABBREV_PATH_SEP reduce using rule 32 (NodeTest -> NameTest .)
    OR_OP           reduce using rule 32 (NodeTest -> NameTest .)
    AND_OP          reduce using rule 32 (NodeTest -> NameTest .)
    EQUAL_OP        reduce using rule 32 (NodeTest -> NameTest .)
    REL_OP          reduce using rule 32 (NodeTest -> NameTest .)
    PLUS_OP         reduce using rule 32 (NodeTest -> NameTest .)
    MINUS_OP        reduce using rule 32 (NodeTest -> NameTest .)
    MULT_OP         reduce using rule 32 (NodeTest -> NameTest .)
    DIV_OP          reduce using rule 32 (NodeTest -> NameTest .)
    MOD_OP          reduce using rule 32 (NodeTest -> NameTest .)
    UNION_OP        reduce using rule 32 (NodeTest -> NameTest .)
    $end            reduce using rule 32 (NodeTest -> NameTest .)
    CLOSE_PAREN     reduce using rule 32 (NodeTest -> NameTest .)
    CLOSE_BRACKET   reduce using rule 32 (NodeTest -> NameTest .)
    COMMA           reduce using rule 32 (NodeTest -> NameTest .)


state 4

    (11) Expr -> MINUS_OP . Expr
    (1) Expr -> . Expr OR_OP Expr
    (2) Expr -> . Expr AND_OP Expr
    (3) Expr -> . Expr EQUAL_OP Expr
    (4) Expr -> . Expr REL_OP Expr
    (5) Expr -> . Expr PLUS_OP Expr
    (6) Expr -> . Expr MINUS_OP Expr
    (7) Expr -> . Expr MULT_OP Expr
    (8) Expr -> . Expr DIV_OP Expr
    (9) Expr -> . Expr MOD_OP Expr
    (10) Expr -> . Expr UNION_OP Expr
    (11) Expr -> . MINUS_OP Expr
    (12) Expr -> . FilterExpr PATH_SEP RelativeLocationPath
    (13) Expr -> . FilterExpr ABBREV_PATH_SEP RelativeLocationPath
    (14) Expr -> . RelativeLocationPath
    (15) Expr -> . AbsoluteLocationPath
    (16) Expr -> . AbbreviatedAbsoluteLocationPath
    (17) Expr -> . FilterExpr
    (42) FilterExpr -> . VariableReference
    (43) FilterExpr -> . LITERAL
    (44) FilterExpr -> . Number
    (45) FilterExpr -> . FunctionCall
    (46) FilterExpr -> . OPEN_PAREN Expr CLOSE_PAREN
    (47) FilterExpr -> . FilterExpr Predicate
    (21) RelativeLocationPath -> . Step
    (22) RelativeLocationPath -> . RelativeLocationPath PATH_SEP Step
    (23) RelativeLocationPath -> . RelativeLocationPath ABBREV_PATH_SEP Step
    (18) AbsoluteLocationPath -> . PATH_SEP
    (19) AbsoluteLocationPath -> . PATH_SEP RelativeLocationPath
    (20) AbbreviatedAbsoluteLocationPath -> . ABBREV_PATH_SEP RelativeLocationPath
    (51) VariableReference -> . DOLLAR QName
    (52) Number -> . FLOAT
    (53) Number -> . INTEGER
    (54) FunctionCall -> . FuncQName FormalArguments
    (24) Step -> . NodeTest
    (25) Step -> . NodeTest PredicateList
    (26) Step -> . AxisSpecifier NodeTest
    (27) Step -> . AxisSpecifier NodeTest PredicateList
    (28) Step -> . ABBREV_STEP_SELF
    (29) Step -> . ABBREV_STEP_PARENT
    (40) FuncQName -> . NCNAME COLON FUNCNAME
    (41) FuncQName -> . FUNCNAME
    (32) NodeTest -> . NameTest
    (33) NodeTest -> . NODETYPE OPEN_PAREN CLOSE_PAREN
    (34) NodeTest -> . NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
    (30) AxisSpecifier -> . AXISNAME AXIS_SEP
    (31) AxisSpecifier -> . ABBREV_AXIS_AT
    (35) NameTest -> . STAR_OP
    (36) NameTest -> . NCNAME COLON STAR_OP
    (37) NameTest -> . QName
    (38) QName -> . NCNAME COLON NCNAME
    (39) QName -> . NCNAME

    MINUS_OP        shift and go to state 4
    LITERAL         shift and go to state 19
    OPEN_PAREN      shift and go to state 9
    PATH_SEP        shift and go to state 10
    ABBREV_PATH_SEP shift and go to state 2
    DOLLAR          shift and go to state 18
    FLOAT           shift and go to state 26
    INTEGER         shift and go to state 13
    ABBREV_STEP_SELF shift and go to state 14
    ABBREV_STEP_PARENT shift and go to state 11
    NCNAME          shift and go to state 7
    FUNCNAME        shift and go to state 29
    NODETYPE        shift and go to state 24
    AXISNAME        shift and go to state 15
    ABBREV_AXIS_AT  shift and go to state 25
    STAR_OP         shift and go to state 23

    NodeTest                       shift and go to state 1
    FuncQName                      shift and go to state 6
    NameTest                       shift and go to state 3
    Expr                           shift and go to state 36
    AxisSpecifier                  shift and go to state 27
    Number                         shift and go to state 12
    VariableReference              shift and go to state 28
    QName                          shift and go to state 17
    Step                           shift and go to state 8
    FunctionCall                   shift and go to state 30
    AbbreviatedAbsoluteLocationPath shift and go to state 5
    AbsoluteLocationPath           shift and go to state 20
    RelativeLocationPath           shift and go to state 21
    FilterExpr                     shift and go to state 22

state 5

    (16) Expr -> AbbreviatedAbsoluteLocationPath .

    CLOSE_PAREN     reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    OR_OP           reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    AND_OP          reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    EQUAL_OP        reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    REL_OP          reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    PLUS_OP         reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    MINUS_OP        reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    MULT_OP         reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    DIV_OP          reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    MOD_OP          reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    UNION_OP        reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    COMMA           reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    $end            reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)
    CLOSE_BRACKET   reduce using rule 16 (Expr -> AbbreviatedAbsoluteLocationPath .)


state 6

    (54) FunctionCall -> FuncQName . FormalArguments
    (55) FormalArguments -> . OPEN_PAREN CLOSE_PAREN
    (56) FormalArguments -> . OPEN_PAREN ArgumentList CLOSE_PAREN

    OPEN_PAREN      shift and go to state 37

    FormalArguments                shift and go to state 38

state 7

    (40) FuncQName -> NCNAME . COLON FUNCNAME
    (36) NameTest -> NCNAME . COLON STAR_OP
    (38) QName -> NCNAME . COLON NCNAME
    (39) QName -> NCNAME .

    COLON           shift and go to state 39
    OPEN_BRACKET    reduce using rule 39 (QName -> NCNAME .)
    PATH_SEP        reduce using rule 39 (QName -> NCNAME .)
    ABBREV_PATH_SEP reduce using rule 39 (QName -> NCNAME .)
    OR_OP           reduce using rule 39 (QName -> NCNAME .)
    AND_OP          reduce using rule 39 (QName -> NCNAME .)
    EQUAL_OP        reduce using rule 39 (QName -> NCNAME .)
    REL_OP          reduce using rule 39 (QName -> NCNAME .)
    PLUS_OP         reduce using rule 39 (QName -> NCNAME .)
    MINUS_OP        reduce using rule 39 (QName -> NCNAME .)
    MULT_OP         reduce using rule 39 (QName -> NCNAME .)
    DIV_OP          reduce using rule 39 (QName -> NCNAME .)
    MOD_OP          reduce using rule 39 (QName -> NCNAME .)
    UNION_OP        reduce using rule 39 (QName -> NCNAME .)
    $end            reduce using rule 39 (QName -> NCNAME .)
    CLOSE_PAREN     reduce using rule 39 (QName -> NCNAME .)
    CLOSE_BRACKET   reduce using rule 39 (QName -> NCNAME .)
    COMMA           reduce using rule 39 (QName -> NCNAME .)


state 8

    (21) RelativeLocationPath -> Step .

    PATH_SEP        reduce using rule 21 (RelativeLocationPath -> Step .)
    ABBREV_PATH_SEP reduce using rule 21 (RelativeLocationPath -> Step .)
    OR_OP           reduce using rule 21 (RelativeLocationPath -> Step .)
    AND_OP          reduce using rule 21 (RelativeLocationPath -> Step .)
    EQUAL_OP        reduce using rule 21 (RelativeLocationPath -> Step .)
    REL_OP          reduce using rule 21 (RelativeLocationPath -> Step .)
    PLUS_OP         reduce using rule 21 (RelativeLocationPath -> Step .)
    MINUS_OP        reduce using rule 21 (RelativeLocationPath -> Step .)
    MULT_OP         reduce using rule 21 (RelativeLocationPath -> Step .)
    DIV_OP          reduce using rule 21 (RelativeLocationPath -> Step .)
    MOD_OP          reduce using rule 21 (RelativeLocationPath -> Step .)
    UNION_OP        reduce using rule 21 (RelativeLocationPath -> Step .)
    $end            reduce using rule 21 (RelativeLocationPath -> Step .)
    CLOSE_PAREN     reduce using rule 21 (RelativeLocationPath -> Step .)
    CLOSE_BRACKET   reduce using rule 21 (RelativeLocationPath -> Step .)
    COMMA           reduce using rule 21 (RelativeLocationPath -> Step .)


state 9

    (46) FilterExpr -> OPEN_PAREN . Expr CLOSE_PAREN
    (1) Expr -> . Expr OR_OP Expr
    (2) Expr -> . Expr AND_OP Expr
    (3) Expr -> . Expr EQUAL_OP Expr
    (4) Expr -> . Expr REL_OP Expr
    (5) Expr -> . Expr PLUS_OP Expr
    (6) Expr -> . Expr MINUS_OP Expr
    (7) Expr -> . Expr MULT_OP Expr
    (8) Expr -> . Expr DIV_OP Expr
    (9) Expr -> . Expr MOD_OP Expr
    (10) Expr -> . Expr UNION_OP Expr
    (11) Expr -> . MINUS_OP Expr
    (12) Expr -> . FilterExpr PATH_SEP RelativeLocationPath
    (13) Expr -> . FilterExpr ABBREV_PATH_SEP RelativeLocationPath
    (14) Expr -> . RelativeLocationPath
    (15) Expr -> . AbsoluteLocationPath
    (16) Expr -> . AbbreviatedAbsoluteLocationPath
    (17) Expr -> . FilterExpr
    (42) FilterExpr -> . VariableReference
    (43) FilterExpr -> . LITERAL
    (44) FilterExpr -> . Number
    (45) FilterExpr -> . FunctionCall
    (46) FilterExpr -> . OPEN_PAREN Expr CLOSE_PAREN
    (47) FilterExpr -> . FilterExpr Predicate
    (21) RelativeLocationPath -> . Step
    (22) RelativeLocationPath -> . RelativeLocationPath PATH_SEP Step
    (23) RelativeLocationPath -> . RelativeLocationPath ABBREV_PATH_SEP Step
    (18) AbsoluteLocationPath -> . PATH_SEP
    (19) AbsoluteLocationPath -> . PATH_SEP RelativeLocationPath
    (20) AbbreviatedAbsoluteLocationPath -> . ABBREV_PATH_SEP RelativeLocationPath
    (51) VariableReference -> . DOLLAR QName
    (52) Number -> . FLOAT
    (53) Number -> . INTEGER
    (54) FunctionCall -> . FuncQName FormalArguments
    (24) Step -> . NodeTest
    (25) Step -> . NodeTest PredicateList
    (26) Step -> . AxisSpecifier NodeTest
    (27) Step -> . AxisSpecifier NodeTest PredicateList
    (28) Step -> . ABBREV_STEP_SELF
    (29) Step -> . ABBREV_STEP_PARENT
    (40) FuncQName -> . NCNAME COLON FUNCNAME
    (41) FuncQName -> . FUNCNAME
    (32) NodeTest -> . NameTest
    (33) NodeTest -> . NODETYPE OPEN_PAREN CLOSE_PAREN
    (34) NodeTest -> . NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
    (30) AxisSpecifier -> . AXISNAME AXIS_SEP
    (31) AxisSpecifier -> . ABBREV_AXIS_AT
    (35) NameTest -> . STAR_OP
    (36) NameTest -> . NCNAME COLON STAR_OP
    (37) NameTest -> . QName
    (38) QName -> . NCNAME COLON NCNAME
    (39) QName -> . NCNAME

    MINUS_OP        shift and go to state 4
    LITERAL         shift and go to state 19
    OPEN_PAREN      shift and go to state 9
    PATH_SEP        shift and go to state 10
    ABBREV_PATH_SEP shift and go to state 2
    DOLLAR          shift and go to state 18
    FLOAT           shift and go to state 26
    INTEGER         shift and go to state 13
    ABBREV_STEP_SELF shift and go to state 14
    ABBREV_STEP_PARENT shift and go to state 11
    NCNAME          shift and go to state 7
    FUNCNAME        shift and go to state 29
    NODETYPE        shift and go to state 24
    AXISNAME        shift and go to state 15
    ABBREV_AXIS_AT  shift and go to state 25
    STAR_OP         shift and go to state 23

    NodeTest                       shift and go to state 1
    FuncQName                      shift and go to state 6
    NameTest                       shift and go to state 3
    Expr                           shift and go to state 40
    AxisSpecifier                  shift and go to state 27
    Number                         shift and go to state 12
    VariableReference              shift and go to state 28
    QName                          shift and go to state 17
    Step                           shift and go to state 8
    FunctionCall                   shift and go to state 30
    AbbreviatedAbsoluteLocationPath shift and go to state 5
    AbsoluteLocationPath           shift and go to state 20
    RelativeLocationPath           shift and go to state 21
    FilterExpr                     shift and go to state 22

state 10

    (18) AbsoluteLocationPath -> PATH_SEP .
    (19) AbsoluteLocationPath -> PATH_SEP . RelativeLocationPath
    (21) RelativeLocationPath -> . Step
    (22) RelativeLocationPath -> . RelativeLocationPath PATH_SEP Step
    (23) RelativeLocationPath -> . RelativeLocationPath ABBREV_PATH_SEP Step
    (24) Step -> . NodeTest
    (25) Step -> . NodeTest PredicateList
    (26) Step -> . AxisSpecifier NodeTest
    (27) Step -> . AxisSpecifier NodeTest PredicateList
    (28) Step -> . ABBREV_STEP_SELF
    (29) Step -> . ABBREV_STEP_PARENT
    (32) NodeTest -> . NameTest
    (33) NodeTest -> . NODETYPE OPEN_PAREN CLOSE_PAREN
    (34) NodeTest -> . NODETYPE OPEN_PAREN LITERAL CLOSE_PAREN
    (30) AxisSpecifier -> . AXISNAME AXIS_SEP
    (31) AxisSpecifier -> . ABBREV_AXIS_AT
    (35) NameTest -> . STAR_OP
    (36) NameTest -> . NCNAME COLON STAR_OP
    (37) NameTest -> . QName
    (38) QName -> . NCNAME COLON NCNAME
    (39) QName -> . NCNAME

    OR_OP           reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    AND_OP          reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    EQUAL_OP        reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    REL_OP          reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    PLUS_OP         reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    MINUS_OP        reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    MULT_OP         reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    DIV_OP          reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    MOD_OP          reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    UNION_OP        reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    $end            reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    CLOSE_PAREN     reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    CLOSE_BRACKET   reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    COMMA           reduce using rule 18 (AbsoluteLocationPath -> PATH_SEP .)
    ABBREV_STEP_SELF shift and go to state 14
    ABBREV_STEP_PARENT shift and go to state 11
    NODETYPE        shift and go to state 24
    AXISNAME        shift and go to state 15
    ABBREV_AXIS_AT  shift and go to state 25
    STAR_OP         shift and go to state 23
    NCNAME          shift and go to state 34

    NodeTest                       shift and go to state 1
    NameTest                       shift and go to state 3
    AxisSpecifier                  shift and go to state 27
    QName                          shift and go to state 17
    Step                           shift and go to state 8
    RelativeLocationPath           shift and go to state 41

state 11

    (29) Step -> ABBREV_STEP_PARENT .

    PATH_SEP        reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    ABBREV_PATH_SEP reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    CLOSE_BRACKET   reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    OR_OP           reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    AND_OP          reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    EQUAL_OP        reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    REL_OP          reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    PLUS_OP         reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    MINUS_OP        reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    MULT_OP         reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    DIV_OP          reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    MOD_OP          reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    UNION_OP        reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    $end            reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    CLOSE_PAREN     reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)
    COMMA           reduce using rule 29 (Step -> ABBREV_STEP_PARENT .)


state 12

    (44) FilterExpr -> Number .

    PATH_SEP        reduce using rule 44 (FilterExpr -> Number .)
    ABBREV_PATH_SEP reduce using rule 44 (FilterExpr -> Number .)
    OPEN_BRACKET    reduce using rule 44 (FilterExpr -> Number .)
    OR_OP           reduce using rule 44 (FilterExpr -> Number .)
    AND_OP          reduce using rule 44 (FilterExpr -> Number .)
    EQUAL_OP        reduce using rule 44 (FilterExpr -> Number .)
    REL_OP          reduce using rule 44 (FilterExpr -> Number .)
    PLUS_OP         reduce using rule 44 (FilterExpr -> Number .)
    MINUS_OP        reduce using rule 44 (FilterExpr -> Number .)
    MULT_OP         reduce using rule 44 (FilterExpr -> Number .)
    DIV_OP          reduce using rule 44 (FilterExpr -> Number .)
    MOD_OP          reduce using rule 44 (FilterExpr -> Number .)
    UNION_OP        reduce using rule 44 (FilterExpr -> Number .)
    $end            reduce using rule 44 (FilterExpr -> Number .)
    CLOSE_PAREN     reduce using rule 44 (FilterExpr -> Number .)
    CLOSE_BRACKET   reduce using rule 44 (FilterExpr -> Number .)
    COMMA           reduce using rule 44 (FilterExpr -> Number .)


state 13

    (53) Number -> INTEGER .
